# Esercitazioni_PCS2026

./: prova1.txt
Esercitazione1/: CMakeLists.txt  medie.cpp  parametri.cpp
Esercitazione2/: CMakeLists.txt  esercitazione2_es1.cpp  esercitazione2_es2.cpp
Esercitazione3/: CMakeLists.txt  es3_main.cpp  rational_es3.hpp
Esercitazione4/: CMakeLists.txt  grafici_tempi_bubble.fig  grafici_tempi_insertion.fig  grafici_tempi_selection.fig  grafici_tempi_sort.fig  measure_sorts.cpp  sorts.hpp  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
Esercitazione5/: CMakeLists.txt  commento.txt  grafico1_tempivettori.fig  grafico2_tempivettori.fig  is_sorted.hpp  measure_sorts.cpp  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
Esercitazione8/: CMakeLists.txt  grafi.hpp  main  main.cpp
Esercitazione9/: CMakelists.txt  adapter.hpp  grafi.hpp  main.cpp
